--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DATABASE_USERNAME=sa
-DATABASE_PASSWORD=Hussnain20
-DATABASE_HOST=localhost
-DATABASE_PORT=6666
-DATABASE_NAME=shoply
+DATABASE_USERNAME=''
+DATABASE_PASSWORD=''
+DATABASE_HOST=''
+DATABASE_PORT=1433
+DATABASE_NAME=''
